Tried to fix alignment issues for nav bar

--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ a {
 }
 
 .nav {
-    align: left;
+    align: center;
     font-size: 1em;
     width: 100%;
     display: block;
